[package]
name = "neumodiag-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart", "blocking", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.10"
indicatif = "0.17"
dirs = "4.0"
anyhow = "1.0"

# Optional: color & terminal control
crossterm = "0.26"

[profile.release]
opt-level = 3
